# local-multiagent

./: .gitignore  .python-version  README.md  SWARM_QUICKSTART.md  WALKTHROUGH.md  pyproject.toml  requirements.txt  test.swebench_test.json
config/: default.yaml  exp2.1_baseline.yaml  exp2.1_control.yaml  exp2.1_experimental.yaml  exp2.1_scaling.yaml  exp3_baseline.yaml  exp3_control.yaml  exp3_experimental.yaml  exp_5_agents.yaml  exp_7b_model.yaml  exp_low_temp.yaml  exp_random_control.yaml  pilot.yaml
data/: humaneval_categories_full.json  swebench_curated.json
docs/: FINAL_HANDOFF_PHASE_3.md  HANDOFF.md  IMPLEMENTATION_REVIEW.md  MODEL_UPDATE_TO_1.5B.md  NEXT_STEPS.md  PHASES_WALKTHROUGH.md  PHASE_3_HANDOFF.md  PHASE_3_HANDOVER_FINAL.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  PHASE_3_QUICK_START.md  PHASE_3_SUMMARY.md  POSTMORTEM_HUMANEVAL_BUG.md  SPECIALIZATION_EXPERIMENTS.md  academic_literature_download_plan.md  architecture.md  compass_artifact_wf-1795b058-ddf5-4d4c-9a82-1433e2d3363c_text_markdown.md  models.md  swarm_system.md  thesis_consolidated_framework.md  usage.md
results/: validation_7b_t0.1_n15.json  validation_report.json
scripts/: analyze_results.py  analyze_swebench_results.py  analyze_swebench_sweep.py  categorize_tasks.py  curate_swebench_lite.py  run_comprehensive_sweep.py  run_experiment.py  run_pilot.py  run_population_sweep.sh  run_specialization_experiments.sh  run_swebench_experiment.py  run_swebench_sweep.sh  run_temp_sweep.sh  smoke_test.py  test_prompt_versions.sh  validate_prompt_tests.sh  validate_swebench_results.py
src/: cli.py  (+1 more)
(+345 files in other folders)
