[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-multi-agent-coding"
version = "0.1.0"
description = "Local multi-agent system for coding tasks"
dependencies = [
    "transformers>=4.30.0",
    "pydantic>=2.0.0",
    "asyncio",
    "fastapi>=0.100.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
